--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,70 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-size: 30px;
+    border-radius: 5px;
 }
 
 #calculator{
-    padding: 100px;
+    margin: 50px;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    justify-self: center;
     width: 500px;
-    height: 800px;
+    height: 700px;
+
+}
+
+
+#screen{
+    display: flex;
+    width: 500px;
+    height: 100px;
+    text-align: center;
+}
+
+
+
+
+.otherButs {
+    width: 500px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .numbers {
     display: flex;
     flex-wrap: wrap;
-    width: fit-content;
+    width: 600px;
+    justify-self: stretch;
+    height: 200px;
+
 }
 
 .operators{
-    margin: 0 auto;
+    display: flex;
+    width: 500px;
 
 }
 
 button{
-    width: 150px;
-    height: 100px;
+width: 250px;
+height: 70px;
+background-color: azure;}
+
+.numbers > button{
+    width: 166px;
 }
 
+.operators > button{
+    background-color: floralwhite;
+}
 
+#equals{
+    background-color: rgb(139, 212, 139);
+}
+#clear{
+    background-color: rgb(255, 121, 121);
+}
